<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E76161"
    tools:context=".ForgetPasswordActivity">

    <TextView
        android:id="@+id/txtforget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="50sp"
        android:fontFamily="@font/regular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/txtstate"
        android:layout_width="wrap_content"
        android:fontFamily="@font/light"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtforget"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/statement" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtstate"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:drawableTint="#56000000"
        android:hint="@string/number"
        android:drawablePadding="15dp"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:fontFamily="@font/regular"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etnumber"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:drawableTint="#56000000"
        android:hint="@string/enter_email_address"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:fontFamily="@font/regular"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4D4D4D"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/regular"
        android:text="@string/submit"
        android:textSize="20sp"
        android:layout_below="@+id/etmail"
        android:layout_marginHorizontal="30dp"/>

</RelativeLayout>