<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E76161"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_page"
            android:textSize="50sp"
            android:fontFamily="@font/regular"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtregister"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/white"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawableTint="#56000000"
            android:hint="@string/name"
            android:drawablePadding="15dp"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/regular"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etname"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:drawableLeft="@android:drawable/stat_sys_phone_call"
            android:drawableTint="#56000000"
            android:hint="@string/number"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:fontFamily="@font/regular"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etnumber"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/white"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:drawableTint="#56000000"
            android:hint="@string/enter_email_address"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/regular"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etmail"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/white"
            android:drawableLeft="@android:drawable/ic_menu_mylocation"
            android:drawableTint="#56000000"
            android:hint="@string/address"
            android:drawablePadding="15dp"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/regular"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:drawableTint="#56000000"
            android:layout_marginHorizontal="30dp"
            android:drawablePadding="15dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:fontFamily="@font/regular"
            android:inputType="textPassword"
            android:layout_below="@+id/etaddress"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etpasswordcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:drawableTint="#56000000"
            android:layout_marginHorizontal="30dp"
            android:drawablePadding="15dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/regular"
            android:inputType="textPassword"
            android:layout_below="@+id/etpassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4D4D4D"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/regular"
            android:text="@string/submit"
            android:textSize="20sp"
            android:layout_below="@+id/etpasswordcon"
            android:layout_marginHorizontal="30dp"/>

    </RelativeLayout>


</ScrollView>